@@ -162,6 +162,9 @@ Set paper size, e.g.,
 .BR legal ,
 .BR A4 .
 .TP
+.B \-F
+Cause the tiff to fill the PDF page.
+.TP
 .BR \-u " [" i | m ]
 Set distance unit,
 .B i
